# rubitimer

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: barchart.rs  main.rs  scramble.rs  stopwatch.rs
