[package]
name = "rubitimer"
description = "A stopwatch with a random generated cube scramble in terminal."
license = "MIT"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/kencun/rubitimer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
rand = "0.8.5"
